instance2-envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/service"
                          route:
                            cluster: local_service
                            timeout: 1s
                http_filters:
                  - name: envoy.router
                    config: {}
  clusters:
    - name: local_service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: instance2
            port_value: 80
      common_lb_config:
        healthy_panic_threshold:
          value: 0
      outlier_detection:
        consecutive_5xx: 5
        consecutive_gateway_failure: 5
        interval: 5s
        base_ejection_time: 30s
        max_ejection_percent: 100
        enforcing_consecutive_5xx: 10
        enforcing_consecutive_gateway_failure: 10
        enforcing_success_rate: 0
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 10000
            max_pending_requests: 10000
            max_requests: 10000
            max_retries: 3
          - priority: HIGH
            max_connections: 10000
            max_pending_requests: 10000
            max_requests: 10000
            max_retries: 3
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
